// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCardBanner renders correct snapshot 1`] = `
<div>
  <div
    class="DescribeElementCardBanner-contentContainer-2"
  >
    <div
      class="DescribeElementCardBanner-iconContainer-5"
    >
      <span
        aria-hidden="true"
        class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium DescribeElementCardBanner-icon-4 css-kp9ftd-MuiIcon-root"
      >
        people
      </span>
    </div>
    <h5
      class="MuiTypography-root MuiTypography-h5 DescribeElementCardBanner-cardTitle-1 css-k8n68h-MuiTypography-root"
    >
      expectedTitle
    </h5>
  </div>
</div>
`;

exports[`DescribeElementCardBanner renders correct snapshot with switches 1`] = `
<div>
  <div
    class="DescribeElementCardBanner-contentContainer-7"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 DescribeElementCardBanner-cardTitle-6 css-k8n68h-MuiTypography-root"
    >
      expectedTitle
    </h5>
  </div>
</div>
`;
